windows poco build

--- a/.hgignore
+++ b/.hgignore
@@ -1,10 +1,12 @@
 syntax: glob
 nbproject/private
 snuffapp/build/
-lib/poco-1.6.0-all/lib/Linux/
 lib/poco-1.6.0-all/config.build
 lib/poco-1.6.0-all/config.make
 snuffapp/dist/Debug/
 snuffapp/.dep.inc
 .dep/
 obj/
+lib/poco-1.6.0-all/lib/
+lib/poco-1.6.0-all/Foundation/src/pocomsg.h
+lib/poco-1.6.0-all/Foundation/src/pocomsg.rc
