--- a/.hgignore
+++ b/.hgignore
@@ -10,3 +10,9 @@ obj/
 lib/poco-1.6.0-all/lib/
 lib/poco-1.6.0-all/Foundation/src/pocomsg.h
 lib/poco-1.6.0-all/Foundation/src/pocomsg.rc
+lib/poco-1.6.0-all/PageCompiler/bin/
+lib/poco-1.6.0-all/PageCompiler/File2Page/bin/
+snuffapp/Debug/
+snuffler.sdf
+snuffler.v12.suo
+snuffler.opensdf
