making windows build

--- a/snuffapp/snuffapp.vcxproj
+++ b/snuffapp/snuffapp.vcxproj
@@ -25,6 +25,7 @@
     <ClInclude Include="PcapSubsystem.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="pcap.props" />
     <None Include="Poco.props" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
