--- a/snuffapp/Poco.props
+++ b/snuffapp/Poco.props
@@ -7,7 +7,7 @@
   <PropertyGroup />
   <ItemDefinitionGroup>
     <ClCompile>
-      <AdditionalIncludeDirectories>$(POCO_DIR)\Foundation\include;$(POCO_DIR)\Util\include;$(POCO_DIR)\XML\include;$(POCO_DIR)\JSON\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(POCO_DIR)\Foundation\include;$(POCO_DIR)\Util\include;$(POCO_DIR)\XML\include;$(POCO_DIR)\Net\include;$(POCO_DIR)\JSON\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(POCO_DIR)/lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
