--- a/snuffapp/snuffapp.vcxproj
+++ b/snuffapp/snuffapp.vcxproj
@@ -21,6 +21,8 @@
     <ClCompile Include="ProtocolARP.cpp" />
     <ClCompile Include="ProtocolEthernet.cpp" />
     <ClCompile Include="ProtocolIP.cpp" />
+    <ClCompile Include="ProtocolNBDatagram.cpp" />
+    <ClCompile Include="ProtocolUDP.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DissectSubsystem.h" />
@@ -33,6 +35,8 @@
     <ClInclude Include="ProtocolARP.h" />
     <ClInclude Include="ProtocolEthernet.h" />
     <ClInclude Include="ProtocolIP.h" />
+    <ClInclude Include="ProtocolNBDatagram.h" />
+    <ClInclude Include="ProtocolUDP.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="pcap.props" />
