--- a/snuffapp/snuffapp.vcxproj
+++ b/snuffapp/snuffapp.vcxproj
@@ -11,32 +11,42 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="DissectSubsystem.cpp" />
-    <ClCompile Include="Frame.cpp" />
-    <ClCompile Include="MAC.cpp" />
+    <ClCompile Include="Dissect\DissectSubsystem.cpp" />
+    <ClCompile Include="Dissect\Frame.cpp" />
+    <ClCompile Include="Dissect\MAC.cpp" />
+    <ClCompile Include="Dissect\Protocol.cpp" />
+    <ClCompile Include="Dissect\ProtocolARP.cpp" />
+    <ClCompile Include="Dissect\ProtocolEthernet.cpp" />
+    <ClCompile Include="Dissect\ProtocolIP.cpp" />
+    <ClCompile Include="Dissect\ProtocolNBDatagram.cpp" />
+    <ClCompile Include="Dissect\ProtocolUDP.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="PcapActivity.cpp" />
-    <ClCompile Include="PcapSubsystem.cpp" />
-    <ClCompile Include="Protocol.cpp" />
-    <ClCompile Include="ProtocolARP.cpp" />
-    <ClCompile Include="ProtocolEthernet.cpp" />
-    <ClCompile Include="ProtocolIP.cpp" />
-    <ClCompile Include="ProtocolNBDatagram.cpp" />
-    <ClCompile Include="ProtocolUDP.cpp" />
+    <ClCompile Include="Model\HostnameModel.cpp" />
+    <ClCompile Include="Model\IPModel.cpp" />
+    <ClCompile Include="Model\Model.cpp" />
+    <ClCompile Include="Model\ModelSubsystem.cpp" />
+    <ClCompile Include="Sniff\PcapActivity.cpp" />
+    <ClCompile Include="Sniff\PcapIfaceAddress.cpp" />
+    <ClCompile Include="Sniff\PcapSubsystem.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DissectSubsystem.h" />
-    <ClInclude Include="Frame.h" />
-    <ClInclude Include="MAC.h" />
+    <ClInclude Include="Dissect\DissectSubsystem.h" />
+    <ClInclude Include="Dissect\Frame.h" />
+    <ClInclude Include="Dissect\MAC.h" />
+    <ClInclude Include="Dissect\Protocol.h" />
+    <ClInclude Include="Dissect\ProtocolARP.h" />
+    <ClInclude Include="Dissect\ProtocolEthernet.h" />
+    <ClInclude Include="Dissect\ProtocolIP.h" />
+    <ClInclude Include="Dissect\ProtocolNBDatagram.h" />
+    <ClInclude Include="Dissect\ProtocolUDP.h" />
     <ClInclude Include="Main.h" />
-    <ClInclude Include="PcapActivity.h" />
-    <ClInclude Include="PcapSubsystem.h" />
-    <ClInclude Include="Protocol.h" />
-    <ClInclude Include="ProtocolARP.h" />
-    <ClInclude Include="ProtocolEthernet.h" />
-    <ClInclude Include="ProtocolIP.h" />
-    <ClInclude Include="ProtocolNBDatagram.h" />
-    <ClInclude Include="ProtocolUDP.h" />
+    <ClInclude Include="Model\HostnameModel.h" />
+    <ClInclude Include="Model\IPModel.h" />
+    <ClInclude Include="Model\Model.h" />
+    <ClInclude Include="Model\ModelSubsystem.h" />
+    <ClInclude Include="Sniff\PcapActivity.h" />
+    <ClInclude Include="Sniff\PcapIfaceAddress.h" />
+    <ClInclude Include="Sniff\PcapSubsystem.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="pcap.props" />
