--- a/snuffapp/snuffapp.vcxproj.filters
+++ b/snuffapp/snuffapp.vcxproj.filters
@@ -5,34 +5,117 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Dissect">
+      <UniqueIdentifier>{764df43b-9b57-4fc9-9d31-06d19e0dc24c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Model">
+      <UniqueIdentifier>{2a4977a3-a593-4133-b8d6-62b18cdcd598}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Sniff">
+      <UniqueIdentifier>{088c93db-2ef0-4a9c-a68e-7d7a9c5db016}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MAC.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="PcapActivity.cpp" />
-    <ClCompile Include="PcapSubsystem.cpp" />
-    <ClCompile Include="DissectSubsystem.cpp" />
-    <ClCompile Include="Frame.cpp" />
-    <ClCompile Include="Protocol.cpp" />
-    <ClCompile Include="ProtocolARP.cpp" />
-    <ClCompile Include="ProtocolEthernet.cpp" />
-    <ClCompile Include="ProtocolIP.cpp" />
-    <ClCompile Include="ProtocolNBDatagram.cpp" />
-    <ClCompile Include="ProtocolUDP.cpp" />
+    <ClCompile Include="Dissect\DissectSubsystem.cpp">
+      <Filter>Dissect</Filter>
+    </ClCompile>
+    <ClCompile Include="Dissect\Frame.cpp">
+      <Filter>Dissect</Filter>
+    </ClCompile>
+    <ClCompile Include="Dissect\MAC.cpp">
+      <Filter>Dissect</Filter>
+    </ClCompile>
+    <ClCompile Include="Dissect\Protocol.cpp">
+      <Filter>Dissect</Filter>
+    </ClCompile>
+    <ClCompile Include="Dissect\ProtocolARP.cpp">
+      <Filter>Dissect</Filter>
+    </ClCompile>
+    <ClCompile Include="Dissect\ProtocolEthernet.cpp">
+      <Filter>Dissect</Filter>
+    </ClCompile>
+    <ClCompile Include="Dissect\ProtocolIP.cpp">
+      <Filter>Dissect</Filter>
+    </ClCompile>
+    <ClCompile Include="Dissect\ProtocolNBDatagram.cpp">
+      <Filter>Dissect</Filter>
+    </ClCompile>
+    <ClCompile Include="Dissect\ProtocolUDP.cpp">
+      <Filter>Dissect</Filter>
+    </ClCompile>
+    <ClCompile Include="Model\HostnameModel.cpp">
+      <Filter>Model</Filter>
+    </ClCompile>
+    <ClCompile Include="Model\IPModel.cpp">
+      <Filter>Model</Filter>
+    </ClCompile>
+    <ClCompile Include="Model\Model.cpp">
+      <Filter>Model</Filter>
+    </ClCompile>
+    <ClCompile Include="Model\ModelSubsystem.cpp">
+      <Filter>Model</Filter>
+    </ClCompile>
+    <ClCompile Include="Sniff\PcapActivity.cpp">
+      <Filter>Sniff</Filter>
+    </ClCompile>
+    <ClCompile Include="Sniff\PcapIfaceAddress.cpp">
+      <Filter>Sniff</Filter>
+    </ClCompile>
+    <ClCompile Include="Sniff\PcapSubsystem.cpp">
+      <Filter>Sniff</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MAC.h" />
     <ClInclude Include="Main.h" />
-    <ClInclude Include="PcapActivity.h" />
-    <ClInclude Include="PcapSubsystem.h" />
-    <ClInclude Include="DissectSubsystem.h" />
-    <ClInclude Include="Frame.h" />
-    <ClInclude Include="Protocol.h" />
-    <ClInclude Include="ProtocolARP.h" />
-    <ClInclude Include="ProtocolEthernet.h" />
-    <ClInclude Include="ProtocolIP.h" />
-    <ClInclude Include="ProtocolNBDatagram.h" />
-    <ClInclude Include="ProtocolUDP.h" />
+    <ClInclude Include="Dissect\DissectSubsystem.h">
+      <Filter>Dissect</Filter>
+    </ClInclude>
+    <ClInclude Include="Dissect\Frame.h">
+      <Filter>Dissect</Filter>
+    </ClInclude>
+    <ClInclude Include="Dissect\MAC.h">
+      <Filter>Dissect</Filter>
+    </ClInclude>
+    <ClInclude Include="Dissect\Protocol.h">
+      <Filter>Dissect</Filter>
+    </ClInclude>
+    <ClInclude Include="Dissect\ProtocolARP.h">
+      <Filter>Dissect</Filter>
+    </ClInclude>
+    <ClInclude Include="Dissect\ProtocolEthernet.h">
+      <Filter>Dissect</Filter>
+    </ClInclude>
+    <ClInclude Include="Dissect\ProtocolIP.h">
+      <Filter>Dissect</Filter>
+    </ClInclude>
+    <ClInclude Include="Dissect\ProtocolNBDatagram.h">
+      <Filter>Dissect</Filter>
+    </ClInclude>
+    <ClInclude Include="Dissect\ProtocolUDP.h">
+      <Filter>Dissect</Filter>
+    </ClInclude>
+    <ClInclude Include="Model\HostnameModel.h">
+      <Filter>Model</Filter>
+    </ClInclude>
+    <ClInclude Include="Model\IPModel.h">
+      <Filter>Model</Filter>
+    </ClInclude>
+    <ClInclude Include="Model\Model.h">
+      <Filter>Model</Filter>
+    </ClInclude>
+    <ClInclude Include="Model\ModelSubsystem.h">
+      <Filter>Model</Filter>
+    </ClInclude>
+    <ClInclude Include="Sniff\PcapActivity.h">
+      <Filter>Sniff</Filter>
+    </ClInclude>
+    <ClInclude Include="Sniff\PcapIfaceAddress.h">
+      <Filter>Sniff</Filter>
+    </ClInclude>
+    <ClInclude Include="Sniff\PcapSubsystem.h">
+      <Filter>Sniff</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Poco.props" />
