--- a/snuffapp/snuffapp.vcxproj.filters
+++ b/snuffapp/snuffapp.vcxproj.filters
@@ -8,123 +8,126 @@
     <Filter Include="Dissect">
       <UniqueIdentifier>{764df43b-9b57-4fc9-9d31-06d19e0dc24c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Model">
-      <UniqueIdentifier>{2a4977a3-a593-4133-b8d6-62b18cdcd598}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Sniff">
+    <Filter Include="Pcap">
       <UniqueIdentifier>{088c93db-2ef0-4a9c-a68e-7d7a9c5db016}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Data">
+      <UniqueIdentifier>{2a4977a3-a593-4133-b8d6-62b18cdcd598}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Dissect\DissectSubsystem.cpp">
+    <ClCompile Include="Arper.cpp" />
+    <ClCompile Include="Arping.cpp" />
+    <ClCompile Include="Injector.cpp" />
+    <ClCompile Include="MAC.cpp" />
+    <ClCompile Include="DissectSubsystem.cpp">
       <Filter>Dissect</Filter>
     </ClCompile>
-    <ClCompile Include="Dissect\Frame.cpp">
+    <ClCompile Include="Frame.cpp">
       <Filter>Dissect</Filter>
     </ClCompile>
-    <ClCompile Include="Dissect\MAC.cpp">
+    <ClCompile Include="HostnameModel.cpp">
+      <Filter>Data</Filter>
+    </ClCompile>
+    <ClCompile Include="IPCache.cpp">
+      <Filter>Data</Filter>
+    </ClCompile>
+    <ClCompile Include="IPModel.cpp">
+      <Filter>Data</Filter>
+    </ClCompile>
+    <ClCompile Include="Model.cpp">
+      <Filter>Data</Filter>
+    </ClCompile>
+    <ClCompile Include="ModelSubsystem.cpp">
+      <Filter>Data</Filter>
+    </ClCompile>
+    <ClCompile Include="PcapActivity.cpp">
+      <Filter>Pcap</Filter>
+    </ClCompile>
+    <ClCompile Include="PcapIfaceAddress.cpp">
+      <Filter>Pcap</Filter>
+    </ClCompile>
+    <ClCompile Include="PcapSubsystem.cpp">
+      <Filter>Pcap</Filter>
+    </ClCompile>
+    <ClCompile Include="Protocol.cpp">
       <Filter>Dissect</Filter>
     </ClCompile>
-    <ClCompile Include="Dissect\Protocol.cpp">
+    <ClCompile Include="ProtocolARP.cpp">
       <Filter>Dissect</Filter>
     </ClCompile>
-    <ClCompile Include="Dissect\ProtocolARP.cpp">
+    <ClCompile Include="ProtocolEthernet.cpp">
       <Filter>Dissect</Filter>
     </ClCompile>
-    <ClCompile Include="Dissect\ProtocolEthernet.cpp">
+    <ClCompile Include="ProtocolIP.cpp">
       <Filter>Dissect</Filter>
     </ClCompile>
-    <ClCompile Include="Dissect\ProtocolIP.cpp">
+    <ClCompile Include="ProtocolNBDatagram.cpp">
       <Filter>Dissect</Filter>
     </ClCompile>
-    <ClCompile Include="Dissect\ProtocolNBDatagram.cpp">
+    <ClCompile Include="ProtocolUDP.cpp">
       <Filter>Dissect</Filter>
-    </ClCompile>
-    <ClCompile Include="Dissect\ProtocolUDP.cpp">
-      <Filter>Dissect</Filter>
-    </ClCompile>
-    <ClCompile Include="Model\HostnameModel.cpp">
-      <Filter>Model</Filter>
-    </ClCompile>
-    <ClCompile Include="Model\IPModel.cpp">
-      <Filter>Model</Filter>
-    </ClCompile>
-    <ClCompile Include="Model\Model.cpp">
-      <Filter>Model</Filter>
-    </ClCompile>
-    <ClCompile Include="Model\ModelSubsystem.cpp">
-      <Filter>Model</Filter>
-    </ClCompile>
-    <ClCompile Include="Sniff\PcapActivity.cpp">
-      <Filter>Sniff</Filter>
-    </ClCompile>
-    <ClCompile Include="Sniff\PcapIfaceAddress.cpp">
-      <Filter>Sniff</Filter>
-    </ClCompile>
-    <ClCompile Include="Sniff\PcapSubsystem.cpp">
-      <Filter>Sniff</Filter>
-    </ClCompile>
-    <ClCompile Include="Model\IPCache.cpp">
-      <Filter>Model</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Main.h" />
-    <ClInclude Include="Dissect\DissectSubsystem.h">
+    <ClInclude Include="Arper.h" />
+    <ClInclude Include="Arping.h" />
+    <ClInclude Include="Injector.h" />
+    <ClInclude Include="MAC.h" />
+    <ClInclude Include="DissectSubsystem.h">
       <Filter>Dissect</Filter>
     </ClInclude>
-    <ClInclude Include="Dissect\Frame.h">
+    <ClInclude Include="Frame.h">
       <Filter>Dissect</Filter>
     </ClInclude>
-    <ClInclude Include="Dissect\MAC.h">
+    <ClInclude Include="HostnameModel.h">
+      <Filter>Data</Filter>
+    </ClInclude>
+    <ClInclude Include="IPCache.h">
+      <Filter>Data</Filter>
+    </ClInclude>
+    <ClInclude Include="IPModel.h">
+      <Filter>Data</Filter>
+    </ClInclude>
+    <ClInclude Include="Model.h">
+      <Filter>Data</Filter>
+    </ClInclude>
+    <ClInclude Include="ModelSubsystem.h">
+      <Filter>Data</Filter>
+    </ClInclude>
+    <ClInclude Include="PcapActivity.h">
+      <Filter>Pcap</Filter>
+    </ClInclude>
+    <ClInclude Include="PcapIfaceAddress.h">
+      <Filter>Pcap</Filter>
+    </ClInclude>
+    <ClInclude Include="PcapSubsystem.h">
+      <Filter>Pcap</Filter>
+    </ClInclude>
+    <ClInclude Include="Protocol.h">
       <Filter>Dissect</Filter>
     </ClInclude>
-    <ClInclude Include="Dissect\Protocol.h">
+    <ClInclude Include="ProtocolARP.h">
       <Filter>Dissect</Filter>
     </ClInclude>
-    <ClInclude Include="Dissect\ProtocolARP.h">
+    <ClInclude Include="ProtocolEthernet.h">
       <Filter>Dissect</Filter>
     </ClInclude>
-    <ClInclude Include="Dissect\ProtocolEthernet.h">
+    <ClInclude Include="ProtocolIP.h">
       <Filter>Dissect</Filter>
     </ClInclude>
-    <ClInclude Include="Dissect\ProtocolIP.h">
+    <ClInclude Include="ProtocolNBDatagram.h">
       <Filter>Dissect</Filter>
     </ClInclude>
-    <ClInclude Include="Dissect\ProtocolNBDatagram.h">
+    <ClInclude Include="ProtocolUDP.h">
       <Filter>Dissect</Filter>
-    </ClInclude>
-    <ClInclude Include="Dissect\ProtocolUDP.h">
-      <Filter>Dissect</Filter>
-    </ClInclude>
-    <ClInclude Include="Model\HostnameModel.h">
-      <Filter>Model</Filter>
-    </ClInclude>
-    <ClInclude Include="Model\IPModel.h">
-      <Filter>Model</Filter>
-    </ClInclude>
-    <ClInclude Include="Model\Model.h">
-      <Filter>Model</Filter>
-    </ClInclude>
-    <ClInclude Include="Model\ModelSubsystem.h">
-      <Filter>Model</Filter>
-    </ClInclude>
-    <ClInclude Include="Sniff\PcapActivity.h">
-      <Filter>Sniff</Filter>
-    </ClInclude>
-    <ClInclude Include="Sniff\PcapIfaceAddress.h">
-      <Filter>Sniff</Filter>
-    </ClInclude>
-    <ClInclude Include="Sniff\PcapSubsystem.h">
-      <Filter>Sniff</Filter>
-    </ClInclude>
-    <ClInclude Include="Model\IPCache.h">
-      <Filter>Model</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Poco.props" />
     <None Include="pcap.props" />
+    <None Include="libnet.props" />
   </ItemGroup>
 </Project>
