--- a/snuffapp/snuffapp.vcxproj
+++ b/snuffapp/snuffapp.vcxproj
@@ -13,16 +13,17 @@
   <ItemGroup>
     <ClCompile Include="Arper.cpp" />
     <ClCompile Include="Arping.cpp" />
+    <ClCompile Include="DataObject.cpp" />
+    <ClCompile Include="DataObserver.cpp" />
+    <ClCompile Include="DataSubsystem.cpp" />
     <ClCompile Include="DissectSubsystem.cpp" />
     <ClCompile Include="Frame.cpp" />
-    <ClCompile Include="HostnameModel.cpp" />
     <ClCompile Include="Injector.cpp" />
     <ClCompile Include="IPCache.cpp" />
-    <ClCompile Include="IPModel.cpp" />
+    <ClCompile Include="IPDataObject.cpp" />
+    <ClCompile Include="IPDataObserver.cpp" />
     <ClCompile Include="MAC.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Model.cpp" />
-    <ClCompile Include="ModelSubsystem.cpp" />
     <ClCompile Include="PcapActivity.cpp" />
     <ClCompile Include="PcapDevice.cpp" />
     <ClCompile Include="PcapIfaceAddress.cpp" />
@@ -39,16 +40,17 @@
   <ItemGroup>
     <ClInclude Include="Arper.h" />
     <ClInclude Include="Arping.h" />
+    <ClInclude Include="DataObject.h" />
+    <ClInclude Include="DataObserver.h" />
+    <ClInclude Include="DataSubsystem.h" />
     <ClInclude Include="DissectSubsystem.h" />
     <ClInclude Include="Frame.h" />
-    <ClInclude Include="HostnameModel.h" />
     <ClInclude Include="Injector.h" />
     <ClInclude Include="IPCache.h" />
-    <ClInclude Include="IPModel.h" />
+    <ClInclude Include="IPDataObject.h" />
+    <ClInclude Include="IPDataObserver.h" />
     <ClInclude Include="MAC.h" />
     <ClInclude Include="Main.h" />
-    <ClInclude Include="Model.h" />
-    <ClInclude Include="ModelSubsystem.h" />
     <ClInclude Include="PcapActivity.h" />
     <ClInclude Include="PcapDevice.h" />
     <ClInclude Include="PcapIfaceAddress.h" />
