--- a/snuffapp/snuffapp.vcxproj.filters
+++ b/snuffapp/snuffapp.vcxproj.filters
@@ -17,7 +17,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Arper.cpp" />
     <ClCompile Include="Arping.cpp" />
     <ClCompile Include="Injector.cpp" />
     <ClCompile Include="MAC.cpp" />
@@ -77,10 +76,18 @@
     <ClCompile Include="IPDataObserver.cpp">
       <Filter>Data</Filter>
     </ClCompile>
+    <ClCompile Include="HostDataObject.cpp">
+      <Filter>Data</Filter>
+    </ClCompile>
+    <ClCompile Include="HostObserver.cpp">
+      <Filter>Data</Filter>
+    </ClCompile>
+    <ClCompile Include="ProtocolDHCP.cpp">
+      <Filter>Dissect</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Main.h" />
-    <ClInclude Include="Arper.h" />
     <ClInclude Include="Arping.h" />
     <ClInclude Include="Injector.h" />
     <ClInclude Include="MAC.h" />
@@ -137,6 +144,15 @@
     </ClInclude>
     <ClInclude Include="IPDataObserver.h">
       <Filter>Data</Filter>
+    </ClInclude>
+    <ClInclude Include="HostDataObject.h">
+      <Filter>Data</Filter>
+    </ClInclude>
+    <ClInclude Include="HostObserver.h">
+      <Filter>Data</Filter>
+    </ClInclude>
+    <ClInclude Include="ProtocolDHCP.h">
+      <Filter>Dissect</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
