--- a/.hgignore
+++ b/.hgignore
@@ -14,7 +14,6 @@ lib/poco-1.6.0-all/PageCompiler/bin/
 lib/poco-1.6.0-all/PageCompiler/File2Page/bin/
 snuffapp/Debug/
 snuffler.sdf
-snuffler.v12.suo
 snuffler.opensdf
 Debug
 Release
@@ -30,3 +29,4 @@ lib/libnet-1.2-rc3/include/libnet.h
 lib/libnet-1.2-rc3/include/libnet/stdint.h
 *.suo
 *.user
+packages/
