--- a/snuffapp/snuffapp.vcxproj
+++ b/snuffapp/snuffapp.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Arping.cpp" />
+    <ClCompile Include="AutoJSONConfiguration.cpp" />
     <ClCompile Include="DataObject.cpp" />
     <ClCompile Include="DataObserver.cpp" />
     <ClCompile Include="DataSubsystem.cpp" />
@@ -41,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Arping.h" />
+    <ClInclude Include="AutoJSONConfiguration.h" />
     <ClInclude Include="DataObject.h" />
     <ClInclude Include="DataObserver.h" />
     <ClInclude Include="DataSubsystem.h" />
