--- a/snuffapp/snuffapp.vcxproj
+++ b/snuffapp/snuffapp.vcxproj
@@ -39,6 +39,7 @@
     <ClCompile Include="ProtocolUDP.cpp" />
     <ClCompile Include="Rouing.cpp" />
     <ClCompile Include="Routing_WIN32.cpp" />
+    <ClCompile Include="ScopedTransaciton.cpp" />
     <ClCompile Include="Solicitator.cpp" />
     <ClCompile Include="ThingDataObject.cpp" />
     <ClCompile Include="ThingObserver.cpp" />
@@ -70,6 +71,7 @@
     <ClInclude Include="ProtocolIP.h" />
     <ClInclude Include="ProtocolNBDatagram.h" />
     <ClInclude Include="ProtocolUDP.h" />
+    <ClInclude Include="ScopedTransaciton.h" />
     <ClInclude Include="Solicitator.h" />
     <ClInclude Include="ThingDataObject.h" />
     <ClInclude Include="ThingObserver.h" />
