--- a/snuffapp/snuffapp.vcxproj.filters
+++ b/snuffapp/snuffapp.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="IPData.cpp">
       <Filter>Data</Filter>
     </ClCompile>
+    <ClCompile Include="ScopedTransaciton.cpp">
+      <Filter>Data</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Main.h" />
@@ -168,6 +171,9 @@
       <Filter>Data</Filter>
     </ClInclude>
     <ClInclude Include="IPData.h">
+      <Filter>Data</Filter>
+    </ClInclude>
+    <ClInclude Include="ScopedTransaciton.h">
       <Filter>Data</Filter>
     </ClInclude>
   </ItemGroup>
