--- a/snuffapp/ion.config.json
+++ b/snuffapp/ion.config.json
@@ -25,6 +25,39 @@
     },
     "ion": {
         "offline-interval": 10,
-        "eventsage": 7
+        "eventsage": 7,
+        "events": {
+            "ip_offline": {
+                "mail": false,
+                "save": true
+            },
+            "ip_online": {
+                "mail": false,
+                "save": true
+            },
+            "thing_online": {
+                "mail": false,
+                "save": true
+            },
+            "thing_offline": {
+                "mail": false,
+                "save": true
+            },
+            "not_authorized": {
+                "mail": false,
+                "save": true
+            }
+        },
+        "mail": {
+            "sender": "",
+            "recipient": "",
+            "subject": "",
+            "content": "",
+            "host": "",
+            "port": 25,
+            "loginmethod": "AUTH_LOGIN",
+            "user": "",
+            "password": ""
+        }
     }
 }
